Bug 448802 - Places panel fading animation does not respect QStyle animation settings and should maybe just be removed entirely
Summary: Places panel fading animation does not respect QStyle animation settings and ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Places (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-19 23:57 UTC by Christoph Feck
Modified: 2022-04-19 21:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.94
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2022-01-19 23:57:34 UTC
SUMMARY

STEPS TO REPRODUCE
1. Disable animations (in kdeglobals: [KDE] AnimationDurationFactor=0.0)
2. Open Dolphin
3. Toggle "Show All Entries" in places panel

Applications can query the QStyle::SH_Widget_Animation_Duration stylehint.

OBSERVED RESULT
New entries are faded in

EXPECTED RESULT
They are just there, no fading

SOFTWARE/OS VERSIONS
git master
Comment 1 Nate Graham 2022-01-20 22:45:14 UTC
Confirmed.

We should just remove the animation entirely as we have generally concluded that hover fade animations for items list and grid views are weird and make the system feel laggy.
Comment 2 Ahmad Samir 2022-04-19 12:43:22 UTC
I think this isn't related to hover effects, it looks like this animation happens when you select "Show all entries",
Comment 3 Ahmad Samir 2022-04-19 21:20:54 UTC
Git commit a9c5de6437e0a01b5bf186595c9d99d8bd86b1e6 by Ahmad Samir.
Committed on 19/04/2022 at 21:05.
Pushed by ahmadsamir into branch 'master'.

KFilePlacesView: use animations only if QStyle::SH_Widget_Animation_Duration > 0

This affects the "Show all Entries" and the icon size change actions.
FIXED-IN: 5.94

M  +24   -4    src/filewidgets/kfileplacesview.cpp

https://invent.kde.org/frameworks/kio/commit/a9c5de6437e0a01b5bf186595c9d99d8bd86b1e6