KFilePlacesView: use animations only if QStyle::SH_Widget_Animation_Duration > 0

This affects the "Show all Entries" and the icon size change actions.

BUG: 448802
FIXED-IN: 5.94